--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 jobs:
 
   build:
-    -name: Build and deploy Gatsby site
+    -name: Build Gatsby site
      runs-on: ubuntu-latest
      needs: build
 
@@ -22,34 +22,47 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '16.0'
+          node-version: 16
+          cache: 'npm'
 
-      - name: Install Project Dependencies
-        run: npm ci
+      - name: Install Gatsby Cli
+        run: npm install --location=global gatsby-cli
+      
+      - name: Install Dependencies
+        run: npm install
 
-      - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@2.12.34
-
-      - name: Build
+      - name: Build the Gatsby Project
         run: gatsby build
       
-      - name: Verify build
+      - name: Verify the Public Folder
         run: ls -la public
 
+      - name: Upload public folder as Package
+        uses: actions/upload-artifact@v3
+        with:
+          name: public-package
+          path: public  
+
   deploy:
-      -name: Build and deploy Gatsby site
+      -name: Deploy Gatsby site
         runs-on: ubuntu-latest
-        needs: deploy
+        needs: build
 
       steps:
+        -name: Download the public folder to deploy Job
+          uses: actions/download-artifact@v3
+          with:
+            name: public-package
+            path: public
+
         - name: Copy to Ubuntu Server
           uses: marcodallasanta/ssh-scp-deploy@v1.2.0
           with:
-            local: 'mycode'
-            remote: '/home/azureuser/'
+            local: 'public/*'
+            remote: '~/public/'
             host: ${{secrets.REMOTE_HOST}}
             user: ${{secrets.REMOTE_USER}}
             key: ${{secrets.SERVER_SSH_KEY}}
             ssh_options: -o StrictHostKeyChecking=no
-            pre_upload: echo "remove the files"
-            post_upload: sudo mv mycode/* /var/www/html/
+            pre_upload: sudo rm -rf /var/www/html/*
+            post_upload: sudo mv ~/public/* /var/www/html/
