--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,20 @@
-name: Build and Deploy
+name: Deploy Gatsby Application to Ubuntu Server
 
 on:
-
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
   workflow_dispatch:
 
 jobs:
-
   build:
-    -name: Build Gatsby site
-     runs-on: ubuntu-latest
-     needs: build
-
+    runs-on: ubuntu-latest
     steps:
-
-      - name: Checkout Code
+      - name: Checkout the Repo
         uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v1
+      - name: Install Node.JS
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'npm'
@@ -44,20 +38,18 @@ jobs:
           path: public  
 
   deploy:
-      -name: Deploy Gatsby site
-        runs-on: ubuntu-latest
-        needs: build
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download the public folder to deploy Job
+        uses: actions/download-artifact@v3
+        with:
+          name: public-package
+          path: public
 
-      steps:
-        -name: Download the public folder to deploy Job
-          uses: actions/download-artifact@v3
-          with:
-            name: public-package
-            path: public
-
-        - name: Copy to Ubuntu Server
-          uses: marcodallasanta/ssh-scp-deploy@v1.2.0
-          with:
+      - name: Copy the Public Folder to Ubuntu
+        uses: marcodallasanta/ssh-scp-deploy@v1.2.0
+        with:
             local: 'public/*'
             remote: '~/public/'
             host: ${{secrets.REMOTE_HOST}}
